--- a/1-React Core Concepts/example.html
+++ b/1-React Core Concepts/example.html
@@ -1,3 +1,8 @@
+<!--
+Here’s a complete example demonstrating all four React core concepts in a single file.
+Since you’re using an .html file, this example uses a CDN to load React and ReactDOM, so you can run it directly in your browser.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
